k8s/apps/jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-jupyter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-jupyter
  template:
    metadata:
      labels:
        app: demo-jupyter
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "jupyter"
        dapr.io/app-port: "8888"
    spec:
      containers:
        - name: jupyter
          image: acrknativelab.azurecr.io/demo-jupyter:latest
          ports:
            - containerPort: 8888
