k8s/apps/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  labels:
    app: demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
        - name: frontend
          image: acrknativelab.azurecr.io/demo-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
spec:
  type: LoadBalancer
  selector:
    app: demo-frontend
  ports:
    - port: 80
      targetPort: 80
